--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,19 @@
 
 @string{NeurIPS = {Advances in Neural Information Processing Systems,}}
 
+@misc{xing2025llmsreliablerankersrank,
+      title={Are LLMs Reliable Rankers? Rank Manipulation via Two-Stage Token Optimization}, 
+      author={Tiancheng Xing and Jerry Li and Yixuan Du and Xiyang Hu},
+      year={2025},
+      eprint={2510.06732},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      html={https://arxiv.org/abs/2510.06732}, 
+      abbr={preprint},
+      selected={true},
+      preview={raf.png}, 
+}
+
 @misc{li2025mitigatinghallucinationslargelanguage,
       title={Mitigating Hallucinations in Large Language Models via Causal Reasoning}, 
       author={Yuangang Li and Yiqing Shen and Yi Nian and Jiechao Gao and Ziyi Wang and Chenxiao Yu and Shawn Li and Jie Wang and Xiyang Hu and Yue Zhao},
@@ -13,6 +26,7 @@
       html={https://arxiv.org/abs/2508.12495}, 
       abbr={preprint},
       selected={true},
+      preview={cdcr.png}, 
 }
 
 @misc{tang2025stealthrankllmrankingmanipulation,
