--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,30 @@
 
 @string{NeurIPS = {Advances in Neural Information Processing Systems,}}
 
+@misc{liu2025topologymattersmeasuringmemory,
+      title={Topology Matters: Measuring Memory Leakage in Multi-Agent LLMs}, 
+      author={Jinbo Liu and Defu Cao and Yifei Wei and Tianyao Su and Yuan Liang and Yushun Dong and Yue Zhao and Xiyang Hu},
+      year={2025},
+      eprint={2512.04668},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      html={https://arxiv.org/abs/2512.04668}, 
+      abbr={preprint},
+      selected={true},
+      preview={mama.png},
+}
+
+@inproceedings{yang2025ad,
+  title={AD-AGENT: A Multi-agent Framework for End-to-end Anomaly Detection},
+  author={Yang, Tiankai and Liu, Junjun and Siu, Wingchun and Wang, Jiahang and Qian, Zhuangzhuang and Song, Chanjuan and Cheng, Cheng and Hu, Xiyang and Zhao, Yue},
+  booktitle={Findings of the 14th International Joint Conference on Natural Language Processing and the 4th Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics (IJCNLP-AACL)},
+  year={2025},
+  html={https://arxiv.org/abs/2505.12594}, 
+  abbr={IJCNLP-AACL},
+  selected={true},
+  preview={adagent.png},
+}
+
 @misc{xing2025llmsreliablerankersrank,
       title={Are LLMs Reliable Rankers? Rank Manipulation via Two-Stage Token Optimization}, 
       author={Tiancheng Xing and Jerry Li and Yixuan Du and Xiyang Hu},
@@ -16,15 +40,13 @@
       preview={raf.png}, 
 }
 
-@misc{li2025mitigatinghallucinationslargelanguage,
+@InProceedings{li2025mitigatinghallucinationslargelanguage,
       title={Mitigating Hallucinations in Large Language Models via Causal Reasoning}, 
       author={Yuangang Li and Yiqing Shen and Yi Nian and Jiechao Gao and Ziyi Wang and Chenxiao Yu and Shawn Li and Jie Wang and Xiyang Hu and Yue Zhao},
-      year={2025},
-      eprint={2508.12495},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
+      year={2026},
+      booktitle={Proceedings of the AAAI Conference on Artificial Intelligence}
       html={https://arxiv.org/abs/2508.12495}, 
-      abbr={preprint},
+      abbr={AAAI},
       selected={true},
       preview={cdcr.png}, 
 }
@@ -68,6 +90,17 @@
   selected={false},
 }
 
+@article{li2025drugagent,
+  title={DrugAgent: A Theory-Driven LLM Multi-Agent System for Automating Machine Learning Programming in Drug Discovery},
+  author={Li, Jiate and Liu, Sizhe and Hu, Xiyang and Zhao, Jieyu and Zhao, Yue},
+  journal={Available at SSRN 5746063},
+  year={2025},
+  html={https://ssrn.com/abstract=5746063}, 
+  preview={drugagent.png},
+  abbr={preprint},
+  selected={true},
+}
+
 @misc{liu2025drugagentautomatingaiaideddrug,
   title={DrugAgent: Automating AI-aided Drug Discovery Programming through LLM Multi-Agent Collaboration}, 
   author={Sizhe Liu and Yizhou Lu and Siyu Chen and Xiyang Hu and Jieyu Zhao and Yingzhou Lu and Yue Zhao},
@@ -76,9 +109,8 @@
   archivePrefix={arXiv},
   primaryClass={cs.LG},
   html={https://arxiv.org/abs/2411.15692}, 
-  preview={drugagent.png},
   abbr={preprint},
-  selected={true},
+  selected={false},
 }
 
 @InProceedings{li2025secureondevicevideoood,
