--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,7 +44,7 @@
       title={Mitigating Hallucinations in Large Language Models via Causal Reasoning}, 
       author={Yuangang Li and Yiqing Shen and Yi Nian and Jiechao Gao and Ziyi Wang and Chenxiao Yu and Shawn Li and Jie Wang and Xiyang Hu and Yue Zhao},
       year={2026},
-      booktitle={Proceedings of the AAAI Conference on Artificial Intelligence}
+      booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
       html={https://arxiv.org/abs/2508.12495}, 
       abbr={AAAI},
       selected={true},
