--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,19 @@
 
 @string{NeurIPS = {Advances in Neural Information Processing Systems,}}
 
+@misc{chen2026valueactionalignmentlargelanguage,
+      title={Value-Action Alignment in Large Language Models under Privacy-Prosocial Conflict}, 
+      author={Guanyu Chen and Chenxiao Yu and Xiyang Hu},
+      year={2026},
+      eprint={2601.03546},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      html={https://arxiv.org/abs/2601.03546}, 
+      abbr={preprint},
+      selected={true},
+      preview={vaar.png},
+}
+
 @misc{liu2025topologymattersmeasuringmemory,
       title={Topology Matters: Measuring Memory Leakage in Multi-Agent LLMs}, 
       author={Jinbo Liu and Defu Cao and Yifei Wei and Tianyao Su and Yuan Liang and Yushun Dong and Yue Zhao and Xiyang Hu},
