--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,19 @@
 
 @string{NeurIPS = {Advances in Neural Information Processing Systems,}}
 
+@misc{luo2026lostexecutionmultilingualrobustness,
+      title={Lost in Execution: On the Multilingual Robustness of Tool Calling in Large Language Models}, 
+      author={Zheng Luo and T Pranav Kutralingam and Ogochukwu N Okoani and Wanpeng Xu and Hua Wei and Xiyang Hu},
+      year={2026},
+      eprint={2601.05366},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      html={https://arxiv.org/abs/2601.05366}, 
+      abbr={preprint},
+      selected={true},
+      preview={mlcl.png}, 
+}
+
 @misc{chen2026valueactionalignmentlargelanguage,
       title={Value-Action Alignment in Large Language Models under Privacy-Prosocial Conflict}, 
       author={Guanyu Chen and Chenxiao Yu and Xiyang Hu},
