--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -162,11 +162,15 @@
   abbr={preprint},
 }
 
-@article{hu2022human,
+@article{hu2026human,
   title={Human-Algorithmic Bias: Source, Evolution, and Impact},
   author={Hu, Xiyang and Huang, Yan and Li, Beibei and Lu, Tian},
   journal={Management Science},
-  year={2025},
+  volume={72},
+  number={1},
+  pages={495--514},
+  year={2026},
+  publisher={Institute for Operations Research and the Management Sciences},
   abbr={MS},
   html={https://pubsonline.informs.org/doi/10.1287/mnsc.2022.03862},
   abstract={Prior work on human-algorithmic bias has seen difficulty in empirically identifying the underlying mechanisms of bias, because in a typical "one-time" decision-making scenario, different mechanisms tend to generate the same patterns of observable decisions. In this study, leveraging a unique repeat decision-making setting in a high-stakes micro-lending context, we aim to uncover the underlying source, evolution dynamics, and associated impacts of bias. We first develop and estimate a structural econometric model of the decision dynamics to understand the source and evolution of potential bias in human evaluators in microloan granting. We find that both preference-based bias and belief-based bias are present in human evaluators' decisions and are in favor of female applicants. Through counterfactual simulations, we quantify the effects of the two types of bias on both fairness and profits. The results show that the elimination of either of the two biases improves the fairness in financial resource allocation, as well as the platform profits. The profit improvement mainly stems from the increase in the approval probability for male borrowers, especially those who would eventually pay back loans. Furthermore, to examine how human biases evolve when being inherited by machine learning (ML) algorithms, we then train a set of state-of-the-art ML algorithms for default risk prediction on both real-world datasets with human biases encoded within and counterfactual datasets with human biases partially or fully removed. By comparing the decision outcomes in different counterfactual settings, we find that even fairness-unaware ML algorithms can reduce bias present in human loan-granting decisions. Interestingly, while removing both types of human biases from the training data can further improve ML fairness, the fairness-enhancing effects vary significantly between new and repeat applicants. Based on our findings, we discuss how to reduce decision bias most effectively in a human-machine learning pipeline.},
